// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatUserCard everything defined snapshot 1`] = `
<div
  className="pl-6 sm:pl-10"
>
  <div
    className="relative flex flex-row flex-grow-0 w-full p-2 cursor-pointer rounded-l-full hover:bg-secondary group bg-secondary-hover"
    onClick={[Function]}
  >
    <img
      alt="profilePicture"
      className="w-16 h-16 rounded-full bg-secondary flex-shrink-0"
      src="undefined/api/user2.jpg"
    />
    <div
      className="flex flex-col justify-center flex-grow ml-4 text-tertiary"
    >
      <span
        className="text-2xl tracking-wide truncate w-4/5"
      >
        User2
      </span>
      <div
        className="grid grid-cols-1"
      >
        <span
          className="text-md font-semibold"
        >
          ...
        </span>
      </div>
    </div>
    <button
      className="absolute right-12 top-1/2 transform -translate-y-1/2 p-1 rounded-full bg-hover hidden group-hover:block"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="NotificationsIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
        />
      </svg>
    </button>
    <button
      className="absolute right-4 top-1/2 transform -translate-y-1/2 p-1 rounded-full bg-hover hidden group-hover:block"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </button>
    <div
      className="absolute right-0 top-0 w-1 h-full bg-primary"
    />
  </div>
</div>
`;

exports[`ChatUserCard selected undefined snapshot 1`] = `
<div
  className="pl-6 sm:pl-10"
>
  <div
    className="relative flex flex-row flex-grow-0 w-full p-2 cursor-pointer rounded-l-full hover:bg-secondary group "
    onClick={[Function]}
  >
    <img
      alt="profilePicture"
      className="w-16 h-16 rounded-full bg-secondary flex-shrink-0"
      src="undefined/api/user2.jpg"
    />
    <div
      className="flex flex-col justify-center flex-grow ml-4 text-tertiary"
    >
      <span
        className="text-2xl tracking-wide truncate w-4/5"
      >
        User2
      </span>
      <div
        className="grid grid-cols-1"
      >
        <span
          className="text-sm truncate"
        >
          Hello
        </span>
      </div>
    </div>
    <button
      className="absolute right-12 top-1/2 transform -translate-y-1/2 p-1 rounded-full bg-hover hidden group-hover:block"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="NotificationsIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
        />
      </svg>
    </button>
    <button
      className="absolute right-4 top-1/2 transform -translate-y-1/2 p-1 rounded-full bg-hover hidden group-hover:block"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`ChatUserCard selected undefined user undefined snapshot 1`] = `
<div
  className="pl-6 sm:pl-10"
>
  <div
    className="relative flex flex-row flex-grow-0 w-full p-2 cursor-pointer rounded-l-full hover:bg-secondary group "
    onClick={[Function]}
  >
    <div
      className="absolute rounded-full w-3 h-3 bg-primary -left-4 top-1/2 transform -translate-y-1/2"
    />
    <img
      alt="profilePicture"
      className="w-16 h-16 rounded-full bg-secondary flex-shrink-0"
      src="undefined/api/user1.jpg"
    />
    <div
      className="flex flex-col justify-center flex-grow ml-4 text-tertiary"
    >
      <span
        className="text-2xl tracking-wide truncate w-4/5"
      >
        User1
      </span>
      <div
        className="grid grid-cols-1"
      >
        <span
          className="text-sm truncate"
        >
          Hello
        </span>
      </div>
    </div>
    <button
      className="absolute right-12 top-1/2 transform -translate-y-1/2 p-1 rounded-full bg-hover hidden group-hover:block"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="NotificationsIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
        />
      </svg>
    </button>
    <button
      className="absolute right-4 top-1/2 transform -translate-y-1/2 p-1 rounded-full bg-hover hidden group-hover:block"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`ChatUserCard user undefined snapshot 1`] = `
<div
  className="pl-6 sm:pl-10"
>
  <div
    className="relative flex flex-row flex-grow-0 w-full p-2 cursor-pointer rounded-l-full hover:bg-secondary group bg-secondary-hover"
    onClick={[Function]}
  >
    <div
      className="absolute rounded-full w-3 h-3 bg-primary -left-4 top-1/2 transform -translate-y-1/2"
    />
    <img
      alt="profilePicture"
      className="w-16 h-16 rounded-full bg-secondary flex-shrink-0"
      src="undefined/api/user1.jpg"
    />
    <div
      className="flex flex-col justify-center flex-grow ml-4 text-tertiary"
    >
      <span
        className="text-2xl tracking-wide truncate w-4/5"
      >
        User1
      </span>
      <div
        className="grid grid-cols-1"
      >
        <span
          className="text-md font-semibold"
        >
          ...
        </span>
      </div>
    </div>
    <button
      className="absolute right-12 top-1/2 transform -translate-y-1/2 p-1 rounded-full bg-hover hidden group-hover:block"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="NotificationsIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
        />
      </svg>
    </button>
    <button
      className="absolute right-4 top-1/2 transform -translate-y-1/2 p-1 rounded-full bg-hover hidden group-hover:block"
      onClick={[Function]}
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
    </button>
    <div
      className="absolute right-0 top-0 w-1 h-full bg-primary"
    />
  </div>
</div>
`;
